test/errors/scope-resolution/superFromTopLevelModule1.compopts
--dyno --detailed-errors # superFromTopLevelModule1-detailed.good
--dyno --no-detailed-errors # superFromTopLevelModule1-brief.good
